Fixed the modal not showing

--- a/client/src/components/posts/posts.css
+++ b/client/src/components/posts/posts.css
@@ -1,5 +1,7 @@
-.posts{
-    flex: 9;
-    display: flex;
-    flex-wrap: wrap;
+.posts {
+    margin-top: 10px;
+    margin-left: 120px;
+  flex: 9;
+  display: flex;
+  flex-wrap: wrap;
 }
